✅ add sponsor_pk endpoint
