# backend/docs/swagger.yaml
@@ -1897,4 +1897,23 @@ paths:
       summary: Fund Wallet
       tags:
       - Wallets
+  /wallets/sponsor_pk/:
+    get:
+      consumes:
+      - application/json
+      description: Get Sponsor Public Key
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+      summary: Get Sponsor Public Key
+      tags:
+      - Wallets
 swagger: "2.0"
